--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "npm run lint && npm run build"
+    "test": "npm run lint && npm run build",
+    "prettier": "prettier --write '**/*.js'"
   },
   "dependencies": {
     "@vercel/analytics": "^0.1.8",
+    "jest": "^29.7.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.88.0",
     "next": "^13.5.4",
+    "prettier": "^3.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
@@ -23,8 +26,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
-    "eslint": "8.23.0",
+    "eslint": "^8.57.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-next": "12.2.5",
+    "eslint-plugin-react": "^7.33.2",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "tailwindcss-animate": "^1.0.5"
